dice_backend/src/err
   Compiling dice_backend v0.1.0 (/home/valarauca/Documents/rust/dice_backend/dice_backend)
error[E0433]: failed to resolve: use of undeclared type or module `Subcommand`
  --> src/main.rs:22:21
   |
22 |         .subcommand(Subcommand::with_name("fmt")
   |                     ^^^^^^^^^^ use of undeclared type or module `Subcommand`

warning: unused import: `SubCommand`
 --> src/main.rs:5:20
  |
5 | use clap::{App,Arg,SubCommand};
  |                    ^^^^^^^^^^
  |
  = note: #[warn(unused_imports)] on by default

warning: unused imports: `Write`, `stdout`
 --> src/formatter.rs:2:15
  |
2 | use std::io::{stdout,Write,Read};
  |               ^^^^^^ ^^^^^

warning: unused import: `std::fmt::Display`
 --> src/formatter.rs:4:5
  |
4 | use std::fmt::Display;
  |     ^^^^^^^^^^^^^^^^^

error[E0277]: `()` doesn't implement `std::fmt::Display`
  --> src/formatter.rs:23:19
   |
23 |     format!("{}", tree);
   |                   ^^^^ `()` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `()`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: required by `std::fmt::Display::fmt`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0433.
For more information about an error, try `rustc --explain E0277`.
error: Could not compile `dice_backend`.

To learn more, run the command again with --verbose.
